[tool.poetry]
name = "hotloaded-server"
version = "0.1.0"
description = ""
authors = ["Benjamin van de Vorstenbosch <bencvdv@gmail.com>"]
readme = "README.md"
packages = [{include = "hotloaded_server"}]

[tool.poetry.dependencies]
python = "^3.11"
hotloaded-plugins = {git = "git@github.com:BVengo/hotloaded-plugins.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
